[package]
name = "rna_generator"
version = "0.1.0"
edition = "2021"

# Optional: This is just to illustrate that it matches your Python script's role
description = "Rust-based RNA dataset generator"
license = "MIT"
# etc.

[dependencies]
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"             # Random generation
rand_distr = "0.4"       # Normal distribution or other
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = "0.4"
csv = "1.1"
log = "0.4"
env_logger = "0.9"
indicatif = "0.16"       # For progress bars
rayon = "1.7"            # For parallel iteration if you want concurrency
